# twitch_message_bot

./: Cargo.toml
crates/twitch_message_bot/: Cargo.toml
crates/twitch_message_bot/src/: client.rs  config.rs  lib.rs  util.rs  writer.rs
crates/twitch_message_dispatcher/: Cargo.toml
crates/twitch_message_dispatcher/src/: bind.rs  command.rs  command_file.rs  context.rs  dispatcher.rs  example_args.rs  help.rs  lib.rs  outcome.rs  test.rs
crates/twitch_message_user_defined/: Cargo.toml
crates/twitch_message_user_defined/src/: lib.rs
