[package]
name    = "twitch_message_bot"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
async-trait    = "0.1.68"
log            = "0.4.17"
once_cell      = "1.17.1"
parking_lot    = "0.12.1"
tokio          = { version = "1.27.0", features = ["macros", "sync", "net", "io-util", "time", "rt", "fs"] }
twitch_message = { version = "0.1.2", features = ["std"] }
serde          = { version = "1.0.160", features = ["derive"], optional = true }

[dev-dependencies]
serde_yaml = "0.9.21"
