[package]
name = "twitch_message_dispatcher"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
twitch_message_bot = { path = "../twitch_message_bot" }
twitch_message     = "0.1.2"

parking_lot        = { version = "0.12.1", features = ["send_guard"] }
tokio              = { version = "1.27.0", features = ["rt"] }
serde              = { version = "1.0.160", features = ["derive"] }
once_cell          = "1.17.1"

[dev-dependencies]
anyhow = "1.0.70"
serde_yaml = "0.9.21"
